# gstreamer

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitlab-image-tags.yml  .indent_cpp_list  .pre-commit-config.yaml  README.md  gst-env.py  meson.build  meson_options.txt
subprojects/gst-docs/examples/tutorials/: basic-tutorial-4.c  meson.build
subprojects/gst-docs/examples/tutorials/python/: basic-tutorial-1.py  basic-tutorial-2.py  basic-tutorial-3.py  basic-tutorial-4.py
subprojects/gst-plugins-bad/ext/coqui/: gstcoqui.c  gstcoquistt.c  gstcoquistt.h  meson.build
subprojects/gst-plugins-bad/ext/emeopencdm/: gstemeopencdm.c  gstemeopencdmlogging.c  gstemeopencdmlogging.h  gstopencdmdecryptor.c  gstopencdmdecryptor.h  gstopencdmmediakeys.c  gstopencdmmediakeys.h  gstopencdmmediakeysession.c  gstopencdmmediakeysession.h  gstopencdmmediakeysystemaccess.c  gstopencdmmediakeysystemaccess.h  gstopencdmprotectionsystem.c  gstopencdmprotectionsystem.h  meson.build
subprojects/gst-plugins-bad/ext/faad/: meson.build
subprojects/gst-plugins-bad/ext/ocio/: gstocio.cpp  gstocio.h  meson.build
subprojects/gst-plugins-bad/ext/pango2/: gstpangoclockoverlay.c  gstpangoclockoverlay.h  gstpangooverlayobject.c  gstpangooverlayobject.h  gstpangosubtitleoverlay.c  gstpangosubtitleoverlay.h  gstpangotextoverlay.c  gstpangotextoverlay.h  gstpangotimeoverlay.c  gstpangotimeoverlay.h  meson.build  plugin.c
subprojects/gst-plugins-bad/ext/qoi/: gstqoi.c  gstqoidec.c  gstqoidec.h  gstqoienc.c  gstqoienc.h  meson.build
subprojects/gst-plugins-bad/ext/qoi/qoi/: qoi.h
subprojects/gst-plugins-bad/ext/vmaf/: gstvmafconvert.c  gstvmafconvert.h  gstvmafelement.c  gstvmafelements.h  gstvmafenums.h  gstvmafplugin.c  meson.build  vmaf.c  vmaf.h  vmafconvert.c  vmafconvert.h  vmafenums.h  vmafmap.c  vmafmap.h  vmafplugin.c  vmafplugin.h
subprojects/gst-plugins-bad/gst-libs/gst/analyticmeta/: analytic-meta-prelude.h  meson.build
subprojects/gst-plugins-bad/gst-libs/gst/cuda/: gstcudacontext.cpp  gstcudastream.cpp  gstcudautils.cpp  meson.build
subprojects/gst-plugins-bad/gst-libs/gst/eme/: eme-prelude.h  eme.h  gstemelogging-private.h  gstemelogging.c  gstemeutils.c  gstemeutils.h  gstmediakeys.c  gstmediakeys.h  gstmediakeysession.c  gstmediakeysession.h  gstmediakeysystemaccess.c  gstmediakeysystemaccess.h  meson.build
subprojects/gst-plugins-bad/gst-libs/gst/textlayoutoverlay/: gstbaseclockoverlay.c  gstbaseclockoverlay.h  gstbasesubtitleoverlay.c  gstbasesubtitleoverlay.h  gstbasesubtitleoverlaybin.c  gstbasesubtitleoverlaybin.h  gstbasetextlayoutoverlay.c  gstbasetextlayoutoverlay.h  gstbasetimeoverlay.c  gstbasetimeoverlay.h  gsttextlayoutoverlay-private.h  meson.build  textlayoutoverlay-prelude.h
subprojects/gst-plugins-bad/gst/autoselect/: gstautoselect.c  gstautoselect.h  gstautovideoconvert2.c  gstautovideoconvert2.h  gstautovideodecoder.c  gstautovideodecoder.h  meson.build  plugin.c
subprojects/gst-plugins-bad/gst/subtitlemux/: gstpangoparser.c  gstpangoparser.h  gstsubtitlemux.c  gstsubtitlemux.h  meson.build  plugin.c
subprojects/gst-plugins-bad/sys/applemedia/: avfdeviceprovider.h  avfdeviceprovider.m  avfvideosrc.m  avsamplevideosink.m  iosurfaceglmemory.c  iosurfacevulkanmemory.c  meson.build  plugin.m  sckitaudiosrc.h  sckitaudiosrc.m
subprojects/gst-plugins-bad/sys/applemedia/sckitsrc-swift/: Package.resolved  Package.swift  meson.build  sckitsrc-Swift.h
subprojects/gst-plugins-bad/sys/applemedia/swift/: GstSCKitSrc-Swift.h  Package.swift  README.md  c-bridge.h  meson.build  plugin.m  sckitaudiosrc.h  sckitaudiosrc.m
subprojects/gst-plugins-bad/sys/qcodec2/: COPYING  README  meson.build  meson_options.txt
subprojects/gst-plugins-bad/sys/qcodec2/codec2/: meson.build  plugin.c
subprojects/gst-plugins-bad/tests/examples/eme/: emedemo.c  meson.build
subprojects/gst-plugins-base/gst/subparse/: gstssaparse.c  gstsubparse.c  gstsubparseelement.c  gstsubparseelements.h  meson.build
subprojects/gst-plugins-good/gst/flv/: gstflvdemux.c  gstflvdemux.h  gstflvmux.c  gstflvmux.h  meson.build
subprojects/gst-plugins-ugly/gst/xingmux/: meson.build
subprojects/gst-python/: meson.build  meson_options.txt
subprojects/gst-python/examples/: record_sound.py  stream_camera_rtsp.py
subprojects/gst-python/examples/plugins/python/: exampleTransform.py  identity.py  py_audiotestsrc.py  sinkelement.py
subprojects/gst-python/old_examples/: audio-controller.py  audioconcat.py  bps.py  buffer-draw.py  cp.py  cutter.py  debugslider.py  decodebin.py  f2f.py  fvumeter.py  gstfile.py  maemogst.py  mixer.py  option-parser.py  play.py  remuxer.py  segments.py  switch.py  synchronizer.py  tagsetter.py  video-controller.py  vumeter.py
subprojects/gst-python/testsuite/: overrides_hack.py  test_gst.py  test_plugin.py  test_types.py
subprojects/gst-python/testsuite/old/: test_adapter.py  test_audio.py  test_bin.py  test_buffer.py  test_bus.py  test_caps.py  test_element.py  test_event.py  test_ghostpad.py  test_interface.py  test_iterator.py  test_libtag.py  test_message.py  test_pad.py  test_pbutils.py  test_pipeline.py  test_registry.py  test_segment.py  test_struct.py  test_taglist.py  test_typefind.py  test_xml.py
subprojects/gst-python/testsuite/python/: identity.py
subprojects/gstreamer/libs/gst/check/: gstcheck.c  gstcheck.h  gstharness.c  gstharness.h  meson.build
subprojects/gstreamer/libs/gst/net/: gstnetecnmeta.c  (+3 more)
subprojects/gstreamer/plugins/elements/: gstcapsfilter.c  gstclocksync.c  gstconcat.c  gstdownloadbuffer.c  gstfakesink.c  gstfakesrc.c  gstfakesrc.h  gstfdsink.c  gstfilesink.c  gstfilesrc.c  gstfunnel.c  gstidentity.c  gstinputselector.c  gstmultiqueue.c  gstoutputselector.c  gstqueue.c  gstqueue.h  gstqueue2.c  gststreamiddemux.c  gsttee.c  gsttypefindelement.c  gstvalve.c  meson.build
subprojects/gstreamer/plugins/tracers/: gstbufferrate.c  gstbufferrate.h  gstfactories.c  gstframerate.c  gstframerate.h  gstlatency.c  gstleaks.c  gstrusage.c  gststats.c  gsttracers.c  meson.build
subprojects/gstreamer/tools/: gst-inspect.c  gst-launch.c  meson.build
(+2041 files in other folders)
